# bokuga

./: Cargo.toml  Dockerfile  package-lock.json  package.json  readme.md  tailwind.config.js
src/: input.css  main.rs
templates/: index.html
